--- a/Dolls.html
+++ b/Dolls.html
@@ -131,9 +131,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <section id="custom-AG" class="full">
 	
   <img src="https://files.catbox.moe/7y8kj2.jpg" onclick="openModal();currentSlide(11)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-	 <h2>Jeannie</h2>
-	 <p>coming soon!</p>
-	 <p></p>
+
  </div>
 </div>
 </section>
@@ -196,10 +194,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/csbxw9.jpg" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
-                            <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
-	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
-	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
-	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+                            <p style="position: relative; bottom: 80px ;"><h2>Midnight - 2022</h2>
+	 <p>This doll was a result of me wanting a doll with some sick goth makeup, as I had been knee deep in my own goth "phase" (part of me will always be goth)
 		<p>
 			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
 		</p>
@@ -207,7 +203,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/okn633.png" style="width: 80%; position: relative;">
+                            <img src="https://files.catbox.moe/o5vy3q.jpg" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
@@ -221,23 +217,39 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 			
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/x3rq3n.png" style="width: 80%; position: relative;">
+                            <img src="https://files.catbox.moe/uc7fyo.jpg" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/j1pnr6.png" style="width: 80%; position: relative;">
+                            <img src="https://files.catbox.moe/7z3g80.jpeg" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
 			</div>
 			
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/io9v9y.jpg" style="width: 80%; position: relative;">
+                            <img src="https://files.catbox.moe/a6vyah.jpg" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
                     <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/zsvaet.jpg" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+		 <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/7y8kj2.jpg" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>		 <div class="mySlides">
+                        <div class="center">
+                            <img src="" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>		 <div class="mySlides">
                         <div class="center">
                             <img src="" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
