--- a/Dolls.html
+++ b/Dolls.html
@@ -117,7 +117,6 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   
   <img src="https://files.catbox.moe/a6vyah.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
-  
   <img src="https://files.catbox.moe/zsvaet.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 
  </div>
@@ -221,6 +220,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                             <img src="https://files.catbox.moe/7z3g80.jpeg" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
 			</div>
+		    </div>
 			
                     <div class="mySlides">
                         <div class="center">
