--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
 		
 			<h3 style="font-size:20px;"> Here you will find various pieces from and for my art portfolio, This site itself acts as a piece from my portfolio as well. I believe in a template-free approach to making websites, and have spent the past half year creating my own "old-web" style site!
 			</p>
-        Click on one of the tabs on the side, or an image below to get started!
+        Click on one of the tabs up top, or an image below to get started!
 			</h3>
 
-	     <h2> THIS SITE IS SUPER UNDER CONSTRUCTION!!  <p>
-		     If you wanna get a look at a <i>better</i> website with more meat on it's bones, then check out my <a href="https://er1k4.neocities.org"> neocities!</a>
+	     <h2> THIS SITE IS UNDER CONSTRUCTION!!  <p>
 	     </p>
 		   
 	
