--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -258,14 +258,10 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="" style="width: 80%; position: relative;">
+                            <img src="https://files.catbox.moe/vcreqd.png" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
-                    </div>
-
-
-
-			
+                    </div>	
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/6wpk7d.png" style="width: 80%; position: relative;">
@@ -293,6 +289,12 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/tynxvh.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
