--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -77,6 +77,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   <li><a href="#publication">Publication Design</a></li>
   <li><a href="#posters">Poster Design</a></li>
   <li><a href="#branding">Branding</a></li>
+  <li><a href="#typography">Typography</a></li>
 </ul>
 </div>
 
@@ -149,6 +150,36 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   <img src="https://files.catbox.moe/ue8wu0.png" onclick="openModal();currentSlide(14)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   
   <img src="https://files.catbox.moe/tynxvh.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+<p></p>
+	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" frameborder="0" width="600" height="300" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+	
+	
+
+</details>
+</section>
+		</div>
+	
+	<p></p>
+
+	<div class="container">
+	
+		
+
+	<br>
+<section id="typography" class="full">
+	<header style="background:transparent;"> 
+		<span>Typography</span>
+	</header>
+  
+  <img src="https://files.catbox.moe/ai2igw.png" onclick="openModal();currentSlide(11)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/19rjem.png" onclick="openModal();currentSlide(12)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  
+  <img src="https://files.catbox.moe/bzovtw.png" onclick="openModal();currentSlide(13)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/qv9xsy.png" onclick="openModal();currentSlide(14)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  
+  <img src="https://files.catbox.moe/tqugds.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 <p></p>
 	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" frameborder="0" width="600" height="300" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	
@@ -289,6 +320,36 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/tynxvh.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/ai2igw.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/19rjem.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/bzovtw.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/qv9xsy.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/tqugds.png" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
