--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -141,15 +141,15 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		<span>Branding</span>
 	</header>
   
-  <img src="https://files.catbox.moe/6wpk7d.png" onclick="openModal();currentSlide(11)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/6wpk7d.png" onclick="openModal();currentSlide(10)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/chovay.png" onclick="openModal();currentSlide(12)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/chovay.png" onclick="openModal();currentSlide(11)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/io9v9y.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/io9v9y.jpg" onclick="openModal();currentSlide(12)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/ue8wu0.png" onclick="openModal();currentSlide(14)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/ue8wu0.png" onclick="openModal();currentSlide(13)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/tynxvh.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/tynxvh.png" onclick="openModal();currentSlide(14)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 <p></p>
 	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" frameborder="0" width="600" height="300" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	
@@ -171,15 +171,15 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		<span>Typography</span>
 	</header>
   
-  <img src="https://files.catbox.moe/ai2igw.png" onclick="openModal();currentSlide(11)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/ai2igw.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/19rjem.png" onclick="openModal();currentSlide(12)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/19rjem.png" onclick="openModal();currentSlide(16)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/bzovtw.png" onclick="openModal();currentSlide(13)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/bzovtw.png" onclick="openModal();currentSlide(17)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/qv9xsy.png" onclick="openModal();currentSlide(14)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/qv9xsy.png" onclick="openModal();currentSlide(18)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/tqugds.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/tqugds.png" onclick="openModal();currentSlide(19)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 <p></p>
 	
 	
@@ -271,13 +271,15 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/x3rq3n.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>Krema Satellite Exhibiton</h2></p>
+				In the spring semester of my Junior year Lewis University was able to have their first satellite art exhibition at a local coffeehouse named Krema, although I had no art to share at the time, I wanted to contribute as the owner of Krema was my childhood neighbor, and I wanted to give back to both her, Krema, and to Lewis. This version of the poster is the one that was sent in promotional posters across the university.
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/j1pnr6.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>Krema Satellite Exhibiton</h2></p>
+				In the spring semester of my Junior year Lewis University was able to have their first satellite art exhibition at a local coffeehouse named Krema, although I had no art to share at the time, I wanted to contribute as the owner of Krema was my childhood neighbor, and I wanted to give back to both her, Krema, and to Lewis. This version of the poster is the one that was put up in the cafe itself and seen by patrons.
 			</div>
                     <div class="mySlides">
                         <div class="center">
