--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -285,55 +285,52 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/vcreqd.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>CoHFAC Kickback</h2></p>
+				This is an image i made for the Lewis University College of Humanities, Fine Arts, and Communications Instagram story to promote our second annual fundraiser: CoHFAC Kickback! I used a mix of new assets made by both myself and my peers along with assets that were carried over from the previous year's branding.
                         </div>
                     </div>	
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/6wpk7d.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
-                        </div>
-                    </div>
-                    <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/io9v9y.jpg" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <img src="https://files.catbox.moe/6wpk7d.png" style="width: 60%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"><h2>CoHFAC Kickback</h2></p>This is an image i made to be printed out for the aforementioned CoHFAC Kickback fundraiser event. This poster was promoting an activity we had with our creative writing students to be able to make a poem on the fly with a prompt or even just a word! I used the Instagram story image as a base for this one, however it should be noted that the bottom third of the image seen here was cropped out of the final poster.
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/chovay.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>CoHFAC Kickback</h2></p> This piece was made to be an instagram post on various Lewis University instagram pages promoting CoHFAC Kickback.
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/io9v9y.jpg" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <img src="https://files.catbox.moe/io9v9y.jpg" style="width: 60%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"><h2>CoHFAC Kickback</h2></p> This is the promotional card for the second annual CoHFAC Kickback.
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/ue8wu0.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>CoHFAC Kickback</h2></p>This piece was made as Digital Signage for the various monitors across the Lewis University campus to promote CoHFAC Kickback.
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/tynxvh.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>CoHFAC Kickback</h2></p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/ai2igw.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>One Flew Over the Cuckoo's Nest Project</h2></p>
+				This was an early project for my typography class from my Sophomore year. We were asked to choose a book and design a brand new cover, thus, I chose One Flew Over the Cuckoo's net as it was my favorite book I read in High School and decided it needed it's flowers.
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/19rjem.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>Rage Against</h2></p>
+				This project was born out of a prompt to create something using Swiss Design sensibilities, and seeing as my professor at the time was obsessed with AI, my stubborn self decided to make this whole project revolve around my refusal to use AI in <u>any</u> of my schoolwork.
                         </div>
                     </div>
                     <div class="mySlides">
