--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -284,14 +284,14 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		    </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/vcreqd.png" style="width: 80%; position: relative;">
+                            <img src="https://files.catbox.moe/vcreqd.png" style="height: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>CoHFAC Kickback</h2></p>
 				This is an image i made for the Lewis University College of Humanities, Fine Arts, and Communications Instagram story to promote our second annual fundraiser: CoHFAC Kickback! I used a mix of new assets made by both myself and my peers along with assets that were carried over from the previous year's branding.
                         </div>
                     </div>	
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/6wpk7d.png" style="width: 60%; position: relative;">
+                            <img src="https://files.catbox.moe/6wpk7d.png" style="height: 60%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>CoHFAC Kickback</h2></p>This is an image i made to be printed out for the aforementioned CoHFAC Kickback fundraiser event. This poster was promoting an activity we had with our creative writing students to be able to make a poem on the fly with a prompt or even just a word! I used the Instagram story image as a base for this one, however it should be noted that the bottom third of the image seen here was cropped out of the final poster.
                         </div>
                     </div>
