--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -297,7 +297,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/chovay.png" style="width: 80%; position: relative;">
+                            <img src="https://files.catbox.moe/chovay.png" style="height: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>CoHFAC Kickback</h2></p> This piece was made to be an instagram post on various Lewis University instagram pages promoting CoHFAC Kickback.
                         </div>
                     </div>
