--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
        <p>
       <h2 style="font-size:30px;">Welcome to my hand-made website!</h2>
 		
-			<h3 style="font-size:20px;"> Here you will find various pieces from and for my art portfolio, This site itself acts as a piece from my portfolio as well. I believe in a template-free approach to making websites, and have spent the past half year creating my own "old-web" style site!
+			<h3 style="font-size:20px;"> Here you will find various pieces from and for my art portfolio, the site itself acts as a piece from my portfolio as well. 
+				<br>
+				I believe in a template-free approach to making websites, and have spent much of my free time teaching myself both HTML and CSS.
 			</p>
         Click on one of the tabs up top, or an image below to get started!
 			</h3>
