--- a/WebDesign.html
+++ b/WebDesign.html
@@ -50,13 +50,17 @@
 </section>
 	<p></p>
 	
-<div class="container" style="float:right; width:40%;">
+<div class="container" style="float:right; width:50%;">
 
 
 
   
   <img src="https://files.catbox.moe/0yaxzc.png"  style="object-fit:cover; height:780px; background:transparent; outline:0px; border:0px; ">
-
+The Horder app was made as a mockup for a buy-and-sell platform that would prevent scalpers and scammers from taking advantage of collectors like myself.
+	<br>
+	in recent years more and more people have been taking up colelcting as a hobby, but as a result more and more bad actors have come on the scene to take advantage of collectors both new and seasoned.
+	<br>
+	Horder is my dream platform which is meant to bring power back to the buyer and away from scalpers and scammers, bringing order to your hoarding.
 </div>
 	
 
