--- a/Dolls.html
+++ b/Dolls.html
@@ -70,7 +70,9 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 
-	
+	<header style="background:transparent;"> 
+		<span>Please click on each image for more info!</span>
+	</header>
 <div class=subnavcontainer>
   <ul style="float:none;">
   <li><a href="#custom-AG">Customized 18" Dolls</a></li>
