--- a/Dolls.html
+++ b/Dolls.html
@@ -215,24 +215,17 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/uc7fyo.jpg" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
-                        </div>
-                    </div>
-                    <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/7z3g80.jpeg" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>Amaya - 2022</h2></p>
 							This doll came to me ina  banged up state, with her upper eyelids somehow getting stained.
 							<p>
 								to remedy this i decided to use apoxie sculpt as the medium to cover up the stain, <i>and</i> as a means to reshape the eyes into a more dramatic shape.
 							</p>
 							Her super dramatic makeup draws me to her like a magnet, although she doesn't pass as well as a playline doll, I love her nonetheless.
-			</div>
-		    </div>
-			
+                        </div>
+                    </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/a6vyah.jpg" style="width: 80%; position: relative;">
+                            <img src="https://files.catbox.moe/7z3g80.jpeg" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>Portrait Doll - 2023</h2></p>
 							One of my... odder dolls, she was made from a beat up draculaura i scored at my local GoodWill and her hair is... my own.
 							<p>
@@ -242,22 +235,23 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 							<p>
 								do i recommend doing this? not unless you really want to and have a vaccum, because unlike regular doll hair, human hair gets everywhere and is hard to root into the head neatly.
 							</p>
-                        </div>
-                    </div>
+			</div>
+		    </div>
+			
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/zsvaet.jpg" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"> <h2>Frankie - 2024</h2></p>
+                            <img src="https://files.catbox.moe/a6vyah.jpg" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"><h2>Frankie - 2024</h2></p>
 							This frankie is my most recent custom to date, and perhaps much more understated than some of my others.
 							<p>
 								I wanted to make a more fashion oriented take on the newer Monster High Doll faces, and basically "yassified" Frankie.
 							</p>
                         </div>
                     </div>
-		 <div class="mySlides">
+                    <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/7y8kj2.jpg" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"><h2>Meowlody - 2022</h2></p>
+                            <img src="https://files.catbox.moe/zsvaet.jpg" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"> <h2>Meowlody - 2022</h2></p>
 							This doll was a long time coming, i had made sketches for her about 6 months before i had the courage to start, and the first meowlody i used turned out to have a very weak head, and it split open and was sadly, irreparable.
 							<p>
 								off to eBay I went and after spenduing (what i consider) way too much money on one doll, I was able to get my meowlody base along with a hand combed wig made of acrylic yarn.
@@ -266,13 +260,19 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 								</p>
 							</p>
                         </div>
-                    </div>		 <div class="mySlides">
+                    </div>
+		 <div class="mySlides">
                         <div class="center">
-                            <img src="" style="width: 80%; position: relative;">
+                            <img src="https://files.catbox.moe/7y8kj2.jpg" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>Jeannie - 2024</h2></p>
 							And now my first American Girl Doll to have a custom face up.
 							<br>
 							I had already had hoards of American Girl Dolls by the time i got started on her, the difference with her however is that she was a failed custom from a friend to gacve her to me for free to do what I wanrted with.
+                        </div>
+                    </div>		 <div class="mySlides">
+                        <div class="center">
+                            <img src="" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;">
                         </div>
                     </div>		 <div class="mySlides">
                         <div class="center">
