--- a/Dolls.html
+++ b/Dolls.html
@@ -231,9 +231,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 							<p>
 								for context, for the longest time i never cut my hair, from when i was 7 until i was 17. i cut about 2 feet off and kept it because i knew i would use it for something, i just wasn't sure what.
 							</p>
-							however, one day i realized that i should make a mini-me doll, and knew immediately that i had my use for the spare hair.
-							<p>
-								do i recommend doing this? not unless you really want to and have a vaccum, because unlike regular doll hair, human hair gets everywhere and is hard to root into the head neatly.
+							however, one day i realized that i should make a mini-me doll, and knew immediately that i had my use for the spare hair. Do i recommend doing this? not unless you really want to and have a vaccum, because unlike regular doll hair, human hair gets everywhere and is hard to root into the head neatly.
 							</p>
 			</div>
 		    </div>
@@ -267,9 +265,11 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                             <p style="position: relative; bottom: 80px ;"><h2>Jeannie - 2024</h2></p>
 							And now my first American Girl Doll to have a custom face up.
 							<br>
-							I had already had hoards of American Girl Dolls by the time i got started on her, the difference with her however is that she was a failed custom from a friend to gacve her to me for free to do what I wanrted with.
+							I had already had hoards of American Girl Dolls by the time i got started on her, the difference with her however is that she was a failed custom from a friend to gacve her to me for free to do what I wanted with. And thus, came miss Jeannie!
                         </div>
-                    </div>		 <div class="mySlides">
+                    </div>		
+					
+					<!---<div class="mySlides">
                         <div class="center">
                             <img src="" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;">
@@ -280,7 +280,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                             <p style="position: relative; bottom: 80px ;"><h2></h2></p>
                         </div>
                     </div>
-
+-->
 
 
 
