--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -176,8 +176,6 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   <img src="https://files.catbox.moe/19rjem.png" onclick="openModal();currentSlide(16)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   
   <img src="https://files.catbox.moe/bzovtw.png" onclick="openModal();currentSlide(17)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-	
-  <img src="https://files.catbox.moe/qv9xsy.png" onclick="openModal();currentSlide(18)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   
   <img src="https://files.catbox.moe/tqugds.png" onclick="openModal();currentSlide(19)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 <p></p>
@@ -337,15 +335,10 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/bzovtw.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>Jack.</h2></p>
+							This project was meant to hone our skills in making a type based logo, so i used a fake brand called Jack., which I made way back as a kid in a skateboarding game to be... well a skateboarding brand.
                         </div>
-                    </div>
-                    <div class="mySlides">
-                        <div class="center">
-                            <img src="https://files.catbox.moe/qv9xsy.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
-                        </div>
-                    </div>
+					</div>
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/tqugds.png" style="width: 80%; position: relative;">
