--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -342,15 +342,20 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/tqugds.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>Romeoville Night Market</h2></p>
+							This poster is for a fictional night market for the very real town that I live in. 
+<br>
+							I wanted the vibes to be cozy, but still fresh and breathable, and I think the way I made the text bend and contour helps get that across.
                         </div>
                     </div>
+					<!--
                     <div class="mySlides">
                         <div class="center">
                             <img src="" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
+					-->
 			    
 <a class="prev" onclick="plusSlides(-1)">&#10094</a>
 <a class="next" onclick="plusSlides(1)">&#10095</a>
