--- a/index.html
+++ b/index.html
@@ -45,12 +45,9 @@
 				<br>
 				<br>
 				I believe in a template-free approach to making websites, and have spent much of my free time teaching myself both HTML and CSS.
-			</p>
-        Click on one of the tabs up top, or an image below to get started!
+			</p>I'm still in the process of building this site, but if you wanna browse, go ahead and click on a photo below to get started<p>
 			</h3>
 
-	     <h2> THIS SITE IS UNDER CONSTRUCTION!!  <p>
-	     </p>
 		   
 	
 	
@@ -83,7 +80,6 @@
 	
 
 	</section>
-	     </h2>
 		</section>
 	</div>
 	<footer>
