--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<br>
 				<br>
 				I believe in a template-free approach to making websites, and have spent much of my free time teaching myself both HTML and CSS.
-			</p>I'm still in the process of building this site, but if you wanna browse, go ahead and click on a photo below to get started<p>
+			</p>I'm still in the process of building this site, but if you wanna browse, go ahead and click on a photo below to get started!<p>
 			</h3>
 
 		   
