--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -63,7 +63,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
   <ul>
   <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
-  <li><a href="/Contact">Contact</a></li>
+  <li><a href="mailto:erikaornelas1201@gmail.com">Contact</a></li>
   <li><a href="/About">About</a></li>
   <li><a href="/">Home</a></li>
 </ul>
