--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   title="Dolls" href="/Dolls">
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
     <a class="tooltipster"
-  title="Graphic Design" href="/GraphicDesign">
+  title="Graphic Design" href="/Design">
   <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="UI/UX design" href="/WebDesign">
