--- a/Traditional.html
+++ b/Traditional.html
@@ -74,7 +74,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 <div class=subnavcontainer>
   <ul style="float:none;">
-  <li><a href="#typography">Typography</a></li>
+  <li><a href="#Life">Life Drawing</a></li>
   <li><a href="#publication">Publication Design</a></li>
   <li><a href="#posters">Poster Design</a></li>
   <li><a href="#branding">Branding</a></li>
@@ -143,11 +143,29 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		
 
 	<br>
-<section id="typography" class="full">
+<section id="Life" class="full">
 	<header style="background:transparent;"> 
-		<span>Typography</span>
+		<span>Life Drawing</span>
 	</header>
   
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/10%20sec%20ken.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/5%20ish%20mins%20nina.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
 <p></p>
